unpackaged/main/default/objects/Partner_Involvement__c/Partner_Involvement__c.object-meta.xml
<CustomObject>
    <label>Partner Involvement</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Partner Involvement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>