unpackaged/main/default/objects/Partner_Involvement__c/fields/MKTP_Partner_Involvement_Type__c.field-meta.xml
<CustomField>
    <fullName>MKTP_Partner_Involvement_Type__c</fullName>
    <label>MKTP Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bi-lateral Referral</fullName>
            </value>
            <value>
                <fullName>Brightcove Resells</fullName>
            </value>
            <value>
                <fullName>Partner Resells</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>