unpackaged/main/default/objects/Partner_Involvement__c/fields/Opportunity_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ACV__c</fullName>
    <formula>Opportunity__r.ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>