unpackaged/main/default/objects/Partner_Involvement__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Brightcove Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>