unpackaged/main/default/objects/Partner_Involvement__c/fields/Opportunity_TCV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_TCV__c</fullName>
    <formula>Opportunity__r.TCV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>