unpackaged/main/default/objects/Partner_Involvement__c/fields/Partner_Integration__c.field-meta.xml
<CustomField>
    <fullName>Partner_Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a specific partner solution involved in this opportunity</description>
    <label>Partner Integration</label>
    <referenceTo>Partner_Integration_Offered__c</referenceTo>
    <relationshipLabel>Partner Involvements</relationshipLabel>
    <relationshipName>Partner_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>