unpackaged/main/default/objects/Partner_Involvement__c/fields/Partner_Involvement_Description__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Description__c</fullName>
    <label>Partner Involvement Description</label>
    <type>TextArea</type>
</CustomField>