unpackaged/main/default/objects/Partner_Involvement__c/fields/Partner_Involvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Type__c</fullName>
    <label>Partner Involvement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reselling (writing the paper)</fullName>
            </value>
            <value>
                <fullName>Co-selling</fullName>
            </value>
            <value>
                <fullName>Influencing</fullName>
            </value>
            <value>
                <fullName>Tech Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>