unpackaged/main/default/objects/Partner_Involvement__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Partner Referral to Brightcove</fullName>
            </value>
            <value>
                <fullName>Strategic Alliance Partner</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>Brightcove Referral to Partner</fullName>
            </value>
            <value>
                <fullName>Brightcove Resells</fullName>
            </value>
            <value>
                <fullName>Strategic Platform Partner</fullName>
            </value>
            <value>
                <fullName>Managed Services Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>