unpackaged/main/default/objects/Partner_Involvement__c/recordTypes/Channel.recordType-meta.xml
<RecordType>
    <fullName>Channel</fullName>
    <active>true</active>
    <description>Representing Channel Partner Involvement with an Opportunity</description>
    <label>Channel</label>
</RecordType>