unpackaged/main/default/objects/Partner_Involvement__c/recordTypes/Marketplace.recordType-meta.xml
<RecordType>
    <fullName>Marketplace</fullName>
    <active>true</active>
    <description>Represents Marketplace Partner Involvement in an Opportunity</description>
    <label>Marketplace</label>
</RecordType>